--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- http 차단되면 앞에부분 지워주면 해결됨 -->
     <script src="//www.jsdelivr.com/#!particles.js"></script>
+    <link rel="stylesheet" href="css/index_1249.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/common.css">
     <link rel="shortcut icon" href="img/common/facon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
@@ -583,6 +586,7 @@
     </div>
 
     <div id="snow" class="lastLogo">
+        <!-- https 차단되어서 연결이 안되면 앞에 https: 지워줌 -->
         <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
         <!-- stats.js lib -->
         <script src="//threejs.org/examples/js/libs/stats.min.js"></script>
