--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <!-- http 차단되면 앞에부분 지워주면 해결됨 -->
     <script src="//www.jsdelivr.com/#!particles.js"></script>
+    <link rel="stylesheet" href="css/index_991.css">
     <link rel="stylesheet" href="css/index_1249.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/common.css">
@@ -25,18 +26,25 @@
     <header>
         <div id="headerContent">
             <a href="#"><img src="img/common/logo.png" alt="logo"></a>
-            <nav>
+            <nav class="navHide" id="nHide">
                 <ul>
                     <li><a href="#">공연안내</a></li>
                     <li><a href="#">연간공연</a></li>
                     <li><a href="#">예매안내</a></li>
                     <li><a href="#">공연소식</a></li>
                     <li><a href="#">공연영상</a></li>
+                </ul>
             </nav>
             <button type="submit"><img src="img/common/search-icon.png" alt="searchIcon"></button>
+            <div class="hamberger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </header>
 
+    <script src="js/header_menu.js"></script>
     <!-- 헤더 스크롤시 fixed -->
     <script src="js/headerFix.js"></script>
 
@@ -467,24 +475,8 @@
         </div>
     </div>
 
-    <script>
-        $(document).ready(function () {
-            $('.fade1, .fade2, .fade3, .fade4, .fade5, .fade6').css({opacity:0});
-            $(window).scroll(function () {
-                var ws = $(this).scrollTop();
-
-                if (ws >= 3006) {
-                    $('.fade1').animate({opacity:1},100);
-                    $('.fade2').animate({opacity:1},500);
-                    $('.fade3').animate({opacity:1},1500);
-                    $('.fade4').animate({opacity:1},800);
-                    $('.fade5').animate({opacity:1},1300);
-                    $('.fade6').animate({opacity:1},1100);
-                }
-
-            });
-        });
-    </script>
+    <!-- 시설 사진 정해진 스크롤Y위치 되면 하나씩 딜레이 되면서 보여짐 -->
+    <script src="js/facilityFadeOpacity.js"></script>
 
     <!-- 안산문화예술의전당 사업소개 -->
     <div id="wrap5ProjectIntroduction">
