--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <!-- http 차단되면 앞에부분 지워주면 해결됨 -->
     <script src="//www.jsdelivr.com/#!particles.js"></script>
+    <link rel="stylesheet" href="css/index_767.css">
     <link rel="stylesheet" href="css/index_991.css">
     <link rel="stylesheet" href="css/index_1249.css">
     <link rel="stylesheet" href="css/index.css">
