20220704_태블릿사이즈 반응형 완료

--- a/postblog.html
+++ b/postblog.html
@@ -14,6 +14,9 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <!-- http 차단되면 앞에부분 지워주면 해결됨 -->
     <script src="//www.jsdelivr.com/#!particles.js"></script>
+    <link rel="stylesheet" href="css/blog_767.css">
+    <link rel="stylesheet" href="css/blog_991.css">
+    <link rel="stylesheet" href="css/blog_1249.css">
     <link rel="stylesheet" href="css/blog.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="shortcut icon" href="img/common/facon.png" type="image/x-icon">
@@ -162,28 +165,29 @@
                         </div>
                     </div>
                     <div class="commentText">
-                        <h3>이름</h3>
+                        <h3>flalswjd24</h3>
                         <i class="fa fa-heart">
-                            <span class="favicon">140&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                            <span class="favicon">40&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                         </i>
                         <span class="fa fa-calendar">
-                            <span class="favicon">&nbsp;2022년 7월1일&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                            <span class="favicon">&nbsp;2022년 7월2일&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                         </span>
-                        <p>dddsds</p>
-                        <button class="delete" onclick="commentDelete1();">삭제하기</button>
+                        <p>청년에게 위로와 감동을 주는 음악극이라 기대되네요~ <br>예매는 어디서 할 수 있나요?</p>
+                        <button class="delete" onclick="commentDelete1();" title="삭제하기"></button>
                     </div>
                 </div>
                 <div class="commentContent b">
                     <div class="commentText">
-                        <h3>이름</h3>
+                        <h3>ASAC</h3>
                         <i class="fa fa-heart">
-                            <span class="favicon">140&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                            <span class="favicon">10&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                         </i>
                         <span class="fa fa-calendar">
-                            <span class="favicon">&nbsp;2022년 7월1일&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                            <span class="favicon">&nbsp;2022년 7월2일&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                         </span>
-                        <p>dddsds</p>
-                        <button class="delete" onclick="commentDelete2();">삭제하기</button>
+                        <p>예매는 안산문화예술의전당 사이트에 회원가입을 하신 후,<br>
+                        예매하기 버튼을 클릭 후 이용하실 수 있습니다~ 좋은 공연 관람 되세요:)</p>
+                        <button class="delete" onclick="commentDelete2();" title="삭제하기"></button>
                     </div>
                     <div class="commentImg">
                         <div class="commentImgCard">
@@ -198,28 +202,30 @@
                         </div>
                     </div>
                     <div class="commentText">
-                        <h3>이름</h3>
+                        <h3>qkrdmswn103</h3>
                         <i class="fa fa-heart">
-                            <span class="favicon">140&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                            <span class="favicon">30&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                         </i>
                         <span class="fa fa-calendar">
-                            <span class="favicon">&nbsp;2022년 7월1일&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                            <span class="favicon">&nbsp;2022년 7월4일&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                         </span>
-                        <p>dddsds</p>
-                        <button class="delete" onclick="commentDelete3();">삭제하기</button>
+                        <p>재밌는 공연 추천해주셔서 감사합니다~<br>
+                        공연은 어디서 관람할 수 있나요??</p>
+                        <button class="delete" onclick="commentDelete3();" title="삭제하기"></button>
                     </div>
                 </div>
                 <div class="commentContent d">
                     <div class="commentText">
-                        <h3>이름</h3>
+                        <h3>ASAC</h3>
                         <i class="fa fa-heart">
-                            <span class="favicon">140&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                            <span class="favicon">20&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                         </i>
                         <span class="fa fa-calendar">
-                            <span class="favicon">&nbsp;2022년 7월1일&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                            <span class="favicon">&nbsp;2022년 7월5일&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                         </span>
-                        <p>dddsds</p>
-                        <button class="delete" onclick="commentDelete4();">삭제하기</button>
+                        <p>2022년 8월 27일 토요일 3시 7시에 안산문화예술의전당<br>
+                        달맞이극장에서 만나보실 수 있습니다. 감사합니다~^^</p>
+                        <button class="delete" onclick="commentDelete4();" title="삭제하기"></button>
                     </div>
                     <div class="commentImg">
                         <div class="commentImgCard">
@@ -234,15 +240,17 @@
                         </div>
                     </div>
                     <div class="commentText">
-                        <h3>이름</h3>
+                        <h3>jsomang77</h3>
                         <i class="fa fa-heart">
-                            <span class="favicon">140&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                            <span class="favicon">08&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                         </i>
                         <span class="fa fa-calendar">
-                            <span class="favicon">&nbsp;2022년 7월1일&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                            <span class="favicon">&nbsp;2022년 7월7일&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                         </span>
-                        <p>dddsds</p>
-                        <button class="delete" onclick="commentDelete5();">삭제하기</button>
+                        <p>기대가 되는 내용과 주제네요<br>
+                            빨리 공연을 보는 날이 다가왔으면 좋겠어요 :)
+                        </p>
+                        <button class="delete" onclick="commentDelete5();" title="삭제하기"></button>
                     </div>
                 </div>
 
@@ -311,28 +319,28 @@
                     </span>
                 </div>
                 <div class="subPosts">
-                    <a href="index.html"><h2>생텍쥐페리와 만나는 어린왕자</h2></a>
+                    <a href="index.html"><h2>No.1 마술사 최현우의 멘탈 매직</h2></a>
                     <span>
-                        <a href="index.html">#뮤지컬</a>&nbsp;
-                        <a href="index.html">#어린왕자</a>&nbsp;
-                        <a href="index.html">#5월기획</a>&nbsp;
+                        <a href="index.html">#멘탈매직</a>&nbsp;
+                        <a href="index.html">#2022</a>&nbsp;
+                        <a href="index.html">#The_Brain</a>&nbsp;
                     </span><br>
                     <i class="fa fa-heart">
-                        <span class="favicon">180&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                        <span class="favicon">898&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                     </i>
                     <span class="fa fa-calendar">
-                        <span class="favicon">&nbsp;2022년 5월 5일&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                        <span class="favicon">&nbsp;2022년 7월 01일&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                     </span>
                     <span class="fa fa-comments">
-                        <span class="favicon">&nbsp;20</span>
+                        <span class="favicon">&nbsp;88</span>
                     </span>
                 </div>
                 <div class="subPosts">
-                    <a href="index.html"><h2>생텍쥐페리와 만나는 어린왕자</h2></a>
+                    <a href="index.html"><h2>한여름 콘서트 플레이리스트</h2></a>
                     <span>
-                        <a href="index.html">#뮤지컬</a>&nbsp;
-                        <a href="index.html">#어린왕자</a>&nbsp;
-                        <a href="index.html">#5월기획</a>&nbsp;
+                        <a href="index.html">#콘서트시리즈</a>&nbsp;
+                        <a href="index.html">#처음</a>&nbsp;
+                        <a href="index.html">#김창완</a>&nbsp;
                     </span><br>
                     <i class="fa fa-heart">
                         <span class="favicon">180&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -374,18 +382,18 @@
             <div id="tag">
                 <h3>Tag</h3>
                 <div id="tagBox">
-                    <button class="buttonTag">연극</button>
-                    <button class="buttonTag">뮤지컬</button>
-                    <button class="buttonTag">마당극</button>
-                    <button class="buttonTag">클래식</button>
-                    <button class="buttonTag">오페라</button>
-                    <button class="buttonTag">음악극</button>
-                    <button class="buttonTag">콘서트</button>
-                    <button class="buttonTag">무용</button>
-                    <button class="buttonTag">발레</button>
-                    <button class="buttonTag">다원</button>
-                    <button class="buttonTag">아동극</button>
-                    <button class="buttonTag">기타</button>
+                    <div class="buttonTag"><a href="index.html">연극</a></div>
+                    <div class="buttonTag"><a href="index.html">뮤지컬</a></div>
+                    <div class="buttonTag"><a href="index.html">마당극</a></div>
+                    <div class="buttonTag"><a href="index.html">클래식</a></div>
+                    <div class="buttonTag"><a href="index.html">오페라</a></div>
+                    <div class="buttonTag"><a href="index.html">음악극</a></div>
+                    <div class="buttonTag"><a href="index.html">콘서트</a></div>
+                    <div class="buttonTag"><a href="index.html">무용</a></div>
+                    <div class="buttonTag"><a href="index.html">발레</a></div>
+                    <div class="buttonTag"><a href="index.html">다원</a></div>
+                    <div class="buttonTag"><a href="index.html">아동극</a></div>
+                    <div class="buttonTag"><a href="index.html">기타</a></div>
                 </div>
             </div>
             <div id="map">
